<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_main"
    tools:context="com.work.speedtest_overhead.MainActivity">
    <TextView
        android:id="@+id/tvServerTitle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/best_server"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tvBestServer"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/tvServerTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp"
        android:textColor="@color/white"/>
    <RelativeLayout
        android:id="@+id/rlDownload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBestServer"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tvDownloadTitle"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/download"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvDownloadResult"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="right|center_vertical"
            android:layout_toRightOf="@id/tvDownloadTitle"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:gravity="right|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <ProgressBar
            android:id="@+id/pbDownload"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right|center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/status"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/circular"
            android:secondaryProgress="100"
            android:max="100"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlUpload"
        android:layout_below="@id/rlDownload"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvUpoadTitle"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/upload"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvUploadResult"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="right|center_vertical"
            android:layout_toRightOf="@id/tvUpoadTitle"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:gravity="right|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <ProgressBar
            android:id="@+id/pbUpload"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right|center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/status"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/circular"
            android:secondaryProgress="100"
            android:max="100"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLatency"
        android:layout_below="@id/rlUpload"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvLatency"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/latency"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvLatencyResult"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="right|center_vertical"
            android:layout_toRightOf="@id/tvLatency"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:gravity="right|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <ProgressBar
            android:id="@+id/pbLatency"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right|center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/status"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/circular"
            android:secondaryProgress="100"
            android:max="100"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLoss"
        android:layout_below="@id/rlLatency"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvLoss"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/loss"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvLossResult"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="right|center_vertical"
            android:layout_alignRight="@+id/tvLoss"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:gravity="right|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <ProgressBar
            android:id="@+id/pbLoss"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right|center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/status"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/circular"
            android:secondaryProgress="100"
            android:max="100"
            android:visibility="gone"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <ImageButton
            android:id="@+id/ibStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_start_select"
            android:src="@drawable/btn_start_select"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_test"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="16pt"
            android:textColor="@color/white"/>
    </RelativeLayout>
</RelativeLayout>
